<resources>
    <string name="app_name">泰州电厂</string>
    <string name="action_settings">Settings</string>

    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="file_provider">com.pgyersdk.provider</string>
    <string name="prompt_user">请输入用户名</string>
    <string name="prompt_password">请输入密码</string>
    <string name="rember_password">记住账号</string>

    <string name="logined_member_username">logined_member_username</string>
    <string name="logined_member_password">logined_member_password</string>
    <string name="logined_member_ischeck">logined_member_ischeck</string>
    <string name="ip_address">ip_address</string>

    <string name="login_defsite">login_defsite</string>
    <string name="login_displayname">login_displayname</string>
    <string name="login_emailaddress">login_emailaddress</string>
    <string name="login_myapps">login_myapps</string>
    <string name="login_userName">login_userName</string>
    <string name="login_personid">login_personid</string>
    <string name="login_UserName">loginUserName</string>
    <string name="login_department">login_department</string>
    <string name="login_error_empty_user">用户名不能为空</string>
    <string name="login_error_empty_passwd">密码不能为空</string>

    <string name="error_title">错误</string>
    <string name="error_obtain_once">无法获取ONCE</string>
    <string name="error_network_exception">网络通信异常，请稍后重试</string>
    <string name="error_network_disconnect">网络不可达,请开启Wifi或者移动数据网络</string>
    <string name="error_reply">提交失败</string>
    <string name="error_create_topic">无法创建新话题</string>
    <string name="error_login">无法登录</string>
    <string name="error_fav_nodes">收藏节点错误</string>
    <string name="error_fav_topic">收藏话题错误</string>
    <string name="error_get_profile">无法获取用户个人资料</string>
    <string name="error_unknown">未知错误</string>
    <string name="connect_setting_title">服务器连接设置</string>

    <string name="login_successful_hint">登陆成功</string>
    <string name="get_data_info_fail">获取信息失败</string>
    <string name="have_not_data_txt">暂无相关数据</string>
    <string name="loading_data_fail">加载数据失败...</string>

    <!--正在加载中-->
    <string name="loading">正在加载中...</string>

    <!-- hint -->

    <string name="have_all_data_text">已加载出全部数据...</string>

    <!-- hint -->
    <string name="hint_item_num_title">暂无数据</string>
    <string name="hint_item_desc_title">暂无描述</string>
    <string name="hint_item_date_title">暂无日期</string>
    <string name="have_not_data">暂无数据</string>
    <string name="memo_hint_text">请输入审核意见</string>


    <!--模块名称-->
    <string name="xkjh_text">需款计划</string>
    <string name="cgsq_text">采购申请</string>
    <string name="xjd_text">询价单</string>
    <string name="cgd_text">采购单</string>
    <string name="wzcgfk_text">物资采购付款</string>
    <string name="wzbm_text">物资编码</string>
    <string name="gccg_text">工程采购</string>
    <string name="gcxjd_text">工程询价单</string>
    <string name="gcfwcgd_text">工程服务采购单</string>
    <string name="gys_text">供应商</string>
    <string name="gcys_text">工程验收</string>
    <string name="gcfk_text">工程付款</string>

    <!--需求计划-->
    <string name="requireplannum_text">申请单号:</string>
    <string name="description_text">描述:</string>
    <string name="zhangtao_text">帐套信息:</string>
    <string name="ztdescription_text">帐套描述:</string>
    <string name="status_text">审批状态:</string>
    <string name="itemtype_text">需求计划类型:</string>
    <string name="plantype_text">计划类型:</string>
    <string name="requireperson_text">需求人员:</string>
    <string name="department_text">部门专业:</string>
    <string name="projectnum_text">项目编号:</string>
    <string name="projectname_text">项目名称:</string>
    <string name="plancost_text">项目预算:</string>
    <string name="remaincost_text">预算剩余:</string>
    <string name="createtime_text">申请日期:</string>
    <string name="requiretime_text">需求日期:</string>
    <string name="xq_title">详情</string>
    <string name="paynum_text">审批单号:</string>
    <string name="podesc_text">采购单描述</string>
    <string name="contractnum_text">合同编号</string>
    <string name="contractdesc_text">合同名称</string>
    <string name="financial_text">财务经办人</string>

    <string name="displayname_text">创建人</string>
    <string name="createdate_text">创建时间</string>
    <string name="paytype_text">付款类型</string>
    <string name="payapprovetype_text">付款性质</string>
    <string name="pototalcost_text">采购单金额</string>
    <string name="finalcost_text">合同结算金额</string>
    <string name="paycost_text">本次付款金额</string>
    <string name="payproportion_text">本次付款比例</string>
    <string name="guarantee_text">预留质保金</string>
    <string name="agencyfund_text">代收款</string>
    <string name="paidcost_text">累计付款金额</string>
    <string name="pretaxcost_text">合同累计付款比例</string>
    <string name="paidproportion_text">采购单累计付款比例</string>
    <string name="lastrecdate_text">最后到货日期</string>
    <string name="period_text">质保期</string>
    <string name="expirationdate_text">质保到期日期</string>
    <string name="difference_text">差异情况</string>
    <string name="sp_btn_text">审批</string>
    <string name="jhsqh_text">计划申请行</string>
    <string name="line_text">行:</string>
    <string name="itemnum_text">物资编码:</string>
    <string name="itemspecvendor_text">制造厂商:</string>
    <string name="allcurbal_text">总库存数量:</string>
    <string name="allinvresbal_text">总预留数量:</string>
    <string name="invusebal_text">半年内领用:</string>
    <string name="count_text">需求数量:</string>
    <string name="prcount_text">订购数量:</string>
    <string name="measurement_text">订购单位:</string>
    <string name="lzesticost_text">零值估价:</string>
    <string name="percost_text">单位成本:</string>
    <string name="itemtotalcost_text">行成本:</string>
    <string name="prnum_text">采购申请:</string>
    <string name="materialsec_text">物资费用预算:</string>
    <string name="materialssc_text">物资费用剩余:</string>

    <string name="zt_text">状态:</string>
    <string name="requireplannum1_text_">需求计划申请编号:</string>
    <string name="requestedbyname_text">需求人:</string>
    <string name="department1_text">申请人部门:</string>
    <string name="issuedate_text">请求日期:</string>
    <string name="requireddate_text">要求的日期:</string>
    <string name="cgsqh_text">采购申请行</string>
    <string name="spgc_text">审批记录</string>
    <string name="maxrole_text">审批记录</string>

    <string name="transdate_text">审批日期:</string>
    <string name="node_text">标题:</string>
    <string name="memo_text">意见:</string>

    <!--询价单-->
    <string name="rfqnum_text">询价单:</string>
    <string name="quotationtype_text">报价方式:</string>
    <string name="person_displayname_text">输入人:</string>
    <string name="closeondate_text">截止日期:</string>
    <string name="xjdh_text">询价单行</string>
    <string name="orderqty_text">数量:</string>
    <string name="orderunit_text">订购单位:</string>
    <string name="remark_text">备注:</string>
    <string name="unitcost_text">最近一次报价:</string>
    <string name="enterdate_text">最近一次报价时间:</string>
    <string name="name_text">最近报价供应商:</string>
    <string name="vendor_text">供应商:</string>
    <string name="contact_text">联系人:</string>
    <string name="phone_text">电话:</string>
    <string name="email_text">电子邮件:</string>
    <string name="ztrq_text">状态日期:</string>
    <!--采购单-->
    <string name="ponum_text">采购单编号:</string>
    <string name="podescription_text">采购单描述:</string>
    <string name="pogenre_text">采购单类型:</string>
    <string name="ishtbh_text">合同编号?</string>
    <string name="connum_text">合同编号:</string>
    <string name="owner_text">所属单位:</string>
    <string name="dwmc_text">单位名称:</string>
    <string name="contractstatus_text">合同情况:</string>
    <string name="ytqk_text">委托情况:</string>
    <string name="pretaxtotal_text">税前总计:</string>
    <string name="totaltax1_text">税款总计:</string>
    <string name="totalcost1_text">税后总价:</string>
    <string name="receipts_text">入库情况:</string>
    <string name="name_text1">供应商名称:</string>
    <string name="contact1_text">联系人:</string>
    <string name="voicephone_text">办公电话:</string>
    <string name="faxphone_text">传真:</string>
    <string name="cellphone_text">手机号码:</string>
    <string name="email_text_1">邮箱地址:</string>
    <string name="memo_text_id">询比价情况:</string>
    <string name="cgdh_text">采购单行</string>
    <string name="htwb_text">合同文本</string>
    <string name="fkjh_text">付款计划</string>
    <string name="fkzxqk_text">付款执行情况</string>
    <string name="dg_orderqty_text">订购数量:</string>
    <string name="storeloc_text">库房:</string>
    <string name="unitcost_text_1">不含税单价:</string>
    <string name="linecost_text">不含税总价:</string>
    <string name="afteraunitcost_text">含税单价:</string>
    <string name="afteralinecost_text">含税总价:</string>
    <string name="reqdeliverydate_text">到货日期:</string>
    <string name="requireplannum1_text">需求计划:</string>
    <string name="rfqnum_text_1">询价单:</string>
    <string name="prnum_text_1">采购申请:</string>
    <string name="document_text">文档:</string>
    <string name="wdmc_text">文档名称:</string>
    <string name="docinfo_urlname_text">创建人:</string>
    <string name="createdate1_text">创建日期:</string>
    <string name="ck_text">查看</string>
    <string name="paytype1_text">付款内容:</string>
    <string name="payratio_text">付款比例:</string>
    <string name="payamount_text">付款金额:</string>
    <string name="payplandate_text">预计付款日期:</string>
    <string name="createtime1_text">创建日期:</string>
    <string name="person_displayname1_text">最后修改人:</string>
    <string name="lastmodtime_text">最后修改日期:</string>
    <string name="dh_text">单号:</string>
    <string name="fk_description_text">付款内容:</string>
    <string name="annex_text">附件</string>
    <string name="company_text">供应商</string>
    <string name="producttype_text">供货类型</string>
    <string name="cptype_text">供货商类型</string>
    <string name="fk_desc_tetx">付款内容:</string>
    <string name="createdate2_text">输入日期:</string>
    <string name="actualpaycost_text">付款金额:</string>
    <string name="actualpaydate_text">实际付款日期:</string>
    <string name="payapprovetype1_text">付款性质:</string>

    <string name="totalcost_text">预估总价:</string>
    <string name="mc_createdby_text">申请人:</string>
    <string name="mc_department_text">申请部门:</string>
    <string name="mc_createtime_text">申请时间:</string>
    <string name="sqwzbm_text">申请物资编码</string>
    <string name="mc_materialinfonum_text">物资编码:</string>
    <string name="mc_materialdatatype_text">物资分类:</string>
    <string name="mc_standardname_text">物资名称:</string>
    <string name="mc_lottype_text">批次:</string>
    <string name="mc_unit_text">采购单位:</string>
    <string name="mc_price_text">估价:</string>
    <string name="projectdesc_text">项目描述:</string>
    <string name="projectec_text">预算额度:</string>
    <string name="projectsc_text">预算剩余:</string>
    <string name="prgqyq_text">工期要求:</string>
    <string name="sm_text">说明:</string>
    <string name="xgwj_text">相关文件</string>
    <string name="jj_text">简介:</string>
    <string name="createdate_text_1">创建时间:</string>
    <string name="mc_text">名称:</string>
    <string name="thisscore_text">本次加减分值:</string>
    <string name="cause_text">事件原因:</string>
    <string name="pfjl_text">评分记录</string>
</resources>
