<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/shape_corner_workorder_item"
    android:foreground="?android:selectableItemBackground"
    android:orientation="horizontal"
    card_view:cardCornerRadius="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/document_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:id="@+id/document_text_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/workorder_sb_title"
                    android:hint="@string/hint_item_num_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimens_16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/wdmc_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:id="@+id/wdmc_text_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:ems="16"
                    android:hint="@string/hint_item_num_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimens_16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/docinfo_urlname_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:id="@+id/docinfo_urlname_text_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/workorder_sb_title"
                    android:hint="@string/hint_item_num_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimens_16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/createdate1_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:id="@+id/createdate_text_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/workorder_sb_title"
                    android:hint="@string/hint_item_num_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimens_16sp" />
            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dimen_5"
            android:textColor="@color/nomal_button_color"
            android:text="@string/ck_text"/>
    </RelativeLayout>

</android.support.v7.widget.CardView>