<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/shape_corner_workorder_item"
    android:foreground="?android:selectableItemBackground"
    android:orientation="horizontal"
    card_view:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/displayname_text"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />

            <TextView
                android:id="@+id/displayname_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/workorder_sb_title"
                android:hint="@string/hint_item_num_title"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/transdate_text"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />

            <TextView
                android:id="@+id/transdate_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/workorder_sb_title"
                android:hint="@string/hint_item_num_title"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/ztrq_text"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />

            <TextView
                android:id="@+id/node_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/workorder_sb_title"
                android:hint="@string/hint_item_num_title"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/memo_text"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />

            <TextView
                android:id="@+id/memo_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/workorder_sb_title"
                android:hint="@string/hint_item_num_title"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />
        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>