<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/plan_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/size_10dp">



            <TextView
                android:id="@+id/cgsqh_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:text="@string/xjdh_text"
                android:textSize="@dimen/dimens_16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_line"
            android:background="@drawable/line"></View>
        <LinearLayout
            android:id="@+id/gys_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/size_10dp">



            <TextView
                android:id="@+id/rfqvendor_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:text="@string/gys_text"
                android:textSize="@dimen/dimens_16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_line"
            android:background="@drawable/line"></View>
        <LinearLayout
            android:id="@+id/sqjl_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/size_10dp">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:text="@string/spgc_text"
                android:textSize="@dimen/dimens_16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_line"
            android:background="@drawable/line"></View>



    </LinearLayout>


</LinearLayout>